--- a/example_boston_discover_feature_relationships.ipynb
+++ b/example_boston_discover_feature_relationships.ipynb
@@ -1076,9 +1076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Try correlations\n",
-    "\n",
-    "Whilst we see lots of correlations, these might be driven by outliers."
+    "# Try correlations"
    ]
   },
   {
