--- a/example_boston_discover_feature_relationships.ipynb
+++ b/example_boston_discover_feature_relationships.ipynb
@@ -225,6 +225,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discover non-linear relationships\n",
+    "\n",
+    "_Github note_ colours for `style` don't show up in Github, you'll have to grab a local copy of the Notebook.\n",
+    "\n",
+    "* NOX predicts AGE and DIS\n",
+    "* DIS more weakly predicts AGE, AGE weakly predicts DIS (this imbalance in the relationship isn't shown by a correlation)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1076,7 +1088,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Try correlations"
+    "# Try correlations\n",
+    "\n",
+    "Correlations can give us a direction and information about linear and rank-based relationships which we won't get from RF."
    ]
   },
   {
