--- a/example_titanic_discover_feature_relationships.ipynb
+++ b/example_titanic_discover_feature_relationships.ipynb
@@ -235,6 +235,8 @@
    "source": [
     "# Discover non-linear relationships\n",
     "\n",
+    "_Github note_ colours for `style` don't show up in Github, you'll have to grab a local copy of the Notebook.\n",
+    "\n",
     "* Fare predicts Embarked but Embarked poorly predict Fare\n",
     "* Fare predicts Pclass but Pclass poorly predicts Fare\n",
     "* SibSp and Parch both predict SibSpParch (the sum of both), SibSpParch predicts both of its components\n",
