updates with shuffled data

--- a/example_boston_discover_feature_relationships.ipynb
+++ b/example_boston_discover_feature_relationships.ipynb
@@ -235,7 +235,7 @@
     "_Github note_ colours for `style` don't show up in Github, you'll have to grab a local copy of the Notebook.\n",
     "\n",
     "* NOX predicts RAD, INDUS, TAX and DIS\n",
-    "* RAD predicts NOX poorly, DIS better, TAX better, NOX best\n",
+    "* RAD predicts DIS poorly, NOX better, TAX better\n",
     "* CRIM predicts RAD but RAD poorly predicts CRIM"
    ]
   },
